--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "emotion-theming": "^10.0.27",
     "framer-motion": "^1.11.1",
     "next": "9.4.4",
+    "prettier": "^2.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
